src/scss/components/Resume.scss
.resumeContainer{
    padding: 70px 30px;


    &__title {
        text-align: center;
        font-size: 40px;
        margin-bottom: 30px;
    }

    .resume{
        display: grid;
        grid-template-columns: 1fr 1fr;
        grid-template-rows: 1fr 1fr;
        //justify-content: center;
        align-items: center;
        gap: 40px;

        &__techs{
            //background-color: rgb(207, 230, 236);
            background-color: rgb(228, 244, 248);
            border: 2px solid rgb(44, 42, 44);
            //width: 30%;
            padding: 10px; 
            //justify-self: center;
    
            &--title{
                //border: 1px solid white;
                //background-color: white; 
                //color: rgb(169, 141, 176);
                //color: white;
                border-radius: 30px;
                padding: 10px 0px;
                margin-bottom: 20px;
               // width: 50%;
                text-align: center;
                //justify-self: center;
            }
    
            &--techs{
                display: flex;
                justify-content: center;
                // align-content: center;
                // text-align: center;
                gap: 20px;

                // .techIcon{
                //     font-size: 30px;
                // }

                .techIconImage{
                    //width: 60px;
                    width: 80px;
                }
    
            }
        }

        &__skills{
            background-color: rgb(228, 244, 248);
            border: 2px solid rgb(44, 42, 44);
            //width: 30%;
            padding: 10px; 

            &--title{
                text-align: center;
                padding: 10px 0px;
                margin-bottom: 20px;

            }

            // &--text{

            // }

            .skills {
                display: flex;
                justify-content: space-evenly;
             
                &__listOne, &__listTwo {
                    list-style: none;
                    //color: rgb(255, 255, 255);
                    //color: rgb(255, 255, 255) 0%, pink 50%, red 100%;
                    //background: -webkit-linear-gradient(rgb(241, 200, 241), rgb(180, 215, 237));
                    background: -webkit-linear-gradient(rgb(216, 177, 237) 0%, rgb(154, 183, 202) 50%, rgb(168, 214, 243) 100%);
                    //background: -webkit-linear-gradient(rgb(188, 12, 241), rgb(212, 4, 4));
                    -webkit-background-clip: text;
                    -webkit-text-fill-color: transparent;
                    font-weight: bold;
                    font-size: 22px;
                    //text-shadow: 0px 0px 9px rgb(179, 197, 198);
                }

            }
        }

        // &__experience{
        //     background-color: rgb(228, 244, 248);
        //     border: 2px solid rgb(44, 42, 44);
        //     //width: 30%;
        //     padding: 10px; 

        //     &--title{
        //         text-align: center;
        //         padding: 10px 0px;
        //         margin-bottom: 20px;

        //     }

        //     &--text{

        //     }
        // }

        // &__education{
        //     background-color: rgb(228, 244, 248);
        //     border: 2px solid rgb(44, 42, 44);
        //     //width: 30%;
        //     padding: 10px; 

        //     &--title{
        //         text-align: center;
        //         padding: 10px 0px;
        //         margin-bottom: 20px;

        //     }

        //     &--text{

        //     }
        // }
    }

   
    
}

